plane work